include_HEADERS = ssm.h ssm-time.h ssm.hpp ssmp.hpp ssm-log.hpp dssm-proxy-client.hpp dssm.hpp dssm-def.hpp dssm-utility.hpp libssm.h neighbor.hpp broadcast.hpp
#pkginclude_HEADERS = ssm.h ssm-time.h
#####################################
## For dssm
#include_HEADERS = $(include_HEADERS) dssm-proxy-client.hpp dssm.hpp
#include_HEADERS = $(include_HEADERS) ../dssm/PConnector/src/dssm-proxy-client.hpp ../dssm/PConnector/src/dssm.hpp
#####################################

nobase_include_HEADERS = ssmtype/bumper.h ssmtype/ultrasonic.h

#noinst_HEADERS = libssm.h
